--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
                 <div class="d-flex justify-content-center">
                     <div class="text-center">
-                        <h1 class="mx-auto my-0 text-uppercase">Eternal Elegance Events</h1>
-                        <h2 class="text-white-50 mx-auto mt-2 mb-5">Wedding Planning with Courtney Bates</h2>
+                        <h1 class="mx-auto my-0 text-uppercase">Eternal Elegance Events</h1><br>
+                        <h5 class="text-white mx-auto mt-2 mb-5">Wedding Planning with Courtney Bates</h5>
                         <a class="btn btn-primary" href="#about">Learn More</a>
                     </div>
                 </div>
@@ -227,7 +227,7 @@
                                 <i class="fas fa-envelope text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Email</h4>
                                 <hr class="my-4 mx-auto" />
-                                <div class="small text-black-50"><a href="#!">courtneybpaige@gmail.com</a></div>
+                                <div class="small text-black-50"><a href="mailto:courtneybpaige@gmail.com">courtneybpaige@gmail.com</a></div>
                             </div>
                         </div>
                     </div>
@@ -245,7 +245,7 @@
                 <div class="social d-flex justify-content-center">
                     <a class="mx-2" href="https://twitter.com/home?lang=en" target="_blank"><i class="fab fa-twitter"></i></a>
                     <a class="mx-2" href="https://www.facebook.com/courtneypbates/" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                    <a class="mx-2" href="#!"><i class="fab fa-github"></i></a>
+                    <a class="mx-2" href="https://github.com/courtneybpaige" target="_blank"><i class="fab fa-github"></i></a>
                 </div>
             </div>
         </section>
