--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
             </div>
         </header>
         <!-- About-->
-        <section class="about-section leftalign text-white-50" id="about">
+        <section class="about-section leftalign text-white-50">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
-                    <div class="col-lg-8">
-                        <h1 class="text-white mb-4 text-center">Resume</h1>
+                    <div class="col-lg-8" id="about">
+                        <h1 class="text-white mb-4 text-center"><br>Resume</h1>
                             <h2>Education</h2>
                                 <h5>Brigham Young University</h5>
                                     <h6>Major: Experience Design & Management, Marriott School of Business</h6>
@@ -121,11 +121,11 @@
             </div>
         </section>
         <!-- Projects-->
-        <section class="projects-section bg-light" id="projects">
+        <section class="projects-section bg-light">
             <div class="container px-4 px-lg-5">
                 <!-- Featured Project Row-->
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/happycouple.jpg" alt="Happy Engaged Couple" /></div>
+                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/happycouple.jpg" alt="Happy Engaged Couple" id="projects"/></div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
                             <h4>Love</h4>
