--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Eternal Elegance Events</title>
+        <title>Eternal Elegance</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -38,7 +38,7 @@
             <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
                 <div class="d-flex justify-content-center">
                     <div class="text-center">
-                        <h1 class="mx-auto my-0 text-uppercase">Eternal Elegance Events</h1><br>
+                        <h1 class="mx-auto my-0 mt-2 text-uppercase" style="white-space: nowrap;">Eternal Elegance</h1><br>
                         <h5 class="text-white mx-auto mt-2 mb-5">Wedding Planning with Courtney Bates</h5>
                         <a class="btn btn-primary" href="#about">Learn More</a>
                     </div>
