--- a/html/scratch.html
+++ b/html/scratch.html
@@ -153,7 +153,7 @@
     </div>
 
     <div class="common footer">
-        <a href="../index.html"> www.EternalEleganceEvents.com</a> | &copy; | Courtney Bates   
+        <a href="../index.html"> www.EternalElegance.com</a> | &copy; | Courtney Bates   
     </div>
 
 
