--- a/html/scratch.html
+++ b/html/scratch.html
@@ -23,7 +23,7 @@
             <a href="#bff">Bestfriends</a> |
             <a href="#dat">Dating</a> |
             <a href="#rab">Relationship after Breakup</a> |
-            Go to <a href="../index.html">Eternal Elegance</a> Professional Page<br>
+            Go to <a href="../index.html" target="_blank">Eternal Elegance</a> Professional Page<br>
         </span>
 
         <h1 class="centertext">Our Story</h1>
